log
Tue, Mar 25, 2025  1:06:13 PM: 
 list.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:40:14: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     if (list = NULL || list->head == NULL) return NULL;
              ^
list.c:40:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (list = NULL || list->head == NULL) return NULL;
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
25021aa
Tue, Mar 25, 2025  1:06:27 PM: 
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:40:14: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     if (list = NULL || list->head == NULL) return NULL;
              ^
list.c:40:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (list = NULL || list->head == NULL) return NULL;
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
1cb99af
Tue, Mar 25, 2025  1:06:40 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bb85816
